populate real data and fix form spacing

--- a/src/app/components/add-user/add-user.component.css
+++ b/src/app/components/add-user/add-user.component.css
@@ -19,6 +19,14 @@
     }
 }
 
-.image-upload  {
-    margin: 3% 3% 3% 0;
+.buttons-container {
+    margin-top: 1rem;
+    display: flex;
+    gap: 2%;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
