--- a/src/app/components/edit-user/edit-user.component.css
+++ b/src/app/components/edit-user/edit-user.component.css
@@ -6,3 +6,24 @@
     width: 100%;
     max-width: 600px;
 }
+
+.dropdown-item:hover {
+    background-color: #d67bed;
+    font-weight: 500;
+}
+
+.dropdown-divider {
+    margin: 0;
+}
+
+.buttons-container {
+    margin-top: 1rem;
+    display: flex;
+    gap: 2%;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
